@@ -6,7 +6,7 @@ $alias['depositfiles.net'] = 'depositfiles.com';
 $alias['depositfiles.org'] = 'depositfiles.com';
 $alias['ul.to'] = 'uploaded.net';
 $alias['uploaded.to'] = 'uploaded.net';
-$alias['4share.vn'] = 'up.4share.vn';
+$alias['up.4share.vn'] = '4share.vn';
 $alias['playlist.chiasenhac.com'] = 'chiasenhac.com';
 $alias['d01.megashares.com'] = 'megashares.com';
 $alias['fp.io'] = 'filepost.com';
@@ -17,7 +17,8 @@ $alias['filemarkets.com'] = 'yunfile.com';
 $alias['dfpan.com'] = 'yunfile.com';
 $alias['my.rapidshare.com'] = 'rapidshare.com';
 $alias['ifile.it'] = 'filecloud.io';
-$alias['k2s.cc'] = 'keep2share.cc';
+$alias['keep2s.cc'] = 'k2s.cc';
+$alias['keep2share.cc'] = 'k2s.cc';
 $alias['putlocker.com'] = 'firedrive.com';
 $alias['rg.to'] = 'rapidgator.net';
 $alias['dl3.junocloud.me'] = 'junocloud.me';
